syntax = "proto3";

option csharp_namespace = "Proto.Requests.Tickets";

package contract.requests;

message GetAllTicketsRequestProto {}

message GetTicketsForCurrentSprintRequestProto {}

message GetTicketsWithShowAllSwitchRequestProto {
  bool is_show_all = 1;
}

message GetTicketByIdRequestProto {
  string ticket_id = 1;
}

message TicketProto {
  string ticket_id = 1;
  string name = 2;
  string booking_number = 3;
  string documentation = 4;
  repeated string sprint_ids = 5;
}

message TicketListProto {
  repeated TicketProto tickets = 1;
}

service TicketRequestService {
  rpc GetTicketById(GetTicketByIdRequestProto) returns (TicketProto);
  rpc GetAllTickets(GetAllTicketsRequestProto) returns (TicketListProto);
  rpc GetTicketsForCurrentSprint(GetTicketsForCurrentSprintRequestProto) returns (TicketListProto);
  rpc GetTicketsWithShowAllSwitch(GetTicketsWithShowAllSwitchRequestProto) returns (TicketListProto);
}
