syntax = "proto3";
import "dto/time_slot.proto";

option csharp_namespace = "Proto.Requests.TimeSlots";



message GetTimeSlotByIdRequestProto {
  string time_slot_id = 1;
}

message GetTimeSlotsForWorkDayIdRequestProto {
  string work_day_id = 1;
}



message TimeSlotListProto {
  repeated TimeSlotProto time_slots = 1;
}

service TimeSlotRequestService {
  rpc GetTimeSlotById(GetTimeSlotByIdRequestProto) returns (TimeSlotProto);
  rpc GetTimeSlotsForWorkDayId(GetTimeSlotsForWorkDayIdRequestProto) returns (TimeSlotListProto);
}
